--- a/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
@@ -47,7 +47,7 @@
                     </div>
                     <div class="clear"></div>
                     <div class="form-buttons">
-                        <a class="left" href="<?= $this->getUrl('adminhtml', ['_nosecret' => true]) ?>">&laquo; <?= Mage::helper('adminhtml')->__('Back to Login') ?></a>
+                        <a class="left" href="<?= $this->getUrl('adminhtml', ['_nosecret' => true]) ?>">&laquo; <?= Mage::helper('adminhtml')->__('Back') ?></a>
                         <input type="submit" class="forgot-password form-button" value="<?= $this->quoteEscape(Mage::helper('adminhtml')->__('Reset Password')) ?>" />
                     </div>
                 </fieldset>
