--- a/app/design/adminhtml/default/default/template/forgotpassword.phtml
+++ b/app/design/adminhtml/default/default/template/forgotpassword.phtml
@@ -39,7 +39,7 @@
                     <?= $this->getChildHtml('form.additional.info') ?>
                     <div class="clear"></div>
                     <div class="form-buttons">
-                        <a class="left" href="<?= $this->getUrl('adminhtml', ['_nosecret' => true]) ?>">&laquo; <?= Mage::helper('adminhtml')->__('Back to Login') ?></a>
+                        <a class="left" href="<?= $this->getUrl('adminhtml', ['_nosecret' => true]) ?>">&laquo; <?= Mage::helper('adminhtml')->__('Back') ?></a>
                         <input type="submit" class="forgot-password form-button" value="<?= Mage::helper('adminhtml')->__('Retrieve Password') ?>">
                     </div>
                 </fieldset>
