--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -11,26 +11,25 @@
 
 /** @var Mage_Customer_Block_Account_Forgotpassword $this */
 ?>
-<?= $this->getMessagesBlock()->toHtml() ?>
-<form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
+<form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate-forgot">
     <div class="fieldset">
-        <h1 class="h2"><?= $this->__('Retrieve your password here') ?></h1>
+        <button type="button" class="dialog-close" id="dialog-close-btn" aria-label="<?= $this->__('Close') ?>"><?= $this->getIconSvg('x') ?></button>
+        <h2><?= $this->__('Retrieve your password') ?></h2>
         <p class="required"><?= $this->__('* Required Fields') ?></p>
         <ul class="form-list">
             <li>
-                <label for="email_address" class="required"><?= $this->__('Email Address') ?></label>
+                <label for="email_address_forgot" class="required"><?= $this->__('Email Address') ?></label>
                 <div class="input-box">
-                    <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
+                    <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address_forgot" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" autofocus />
                 </div>
             </li>
             <?= $this->getChildHtml('form.additional.info') ?>
         </ul>
     </div>
     <div class="buttons-set">
-        <p class="back-link"><a href="<?= $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?= $this->__('Back to Login') ?></a></p>
         <button type="submit" title="<?= $this->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
     </div>
 </form>
 <script type="text/javascript">
-    var dataForm = new VarienForm('form-validate', true);
+    var dataFormForgot = new VarienForm('form-validate-forgot', true);
 </script>
