--- a/app/design/frontend/base/default/template/customer/form/confirmation.phtml
+++ b/app/design/frontend/base/default/template/customer/form/confirmation.phtml
@@ -23,14 +23,14 @@
             <li>
                 <label for="email_address" class="required"><?= $this->__('Email Address') ?></label>
                 <div class="input-box">
-                    <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmail()) ?>" />
+                    <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmail()) ?>" />
                 </div>
             </li>
         </ul>
     </div>
     <div class="buttons-set">
         <p class="required"><?= $this->__('* Required Fields') ?></p>
-        <p class="back-link"><a href="<?= $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?= $this->__('Back to Login') ?></a></p>
+        <p class="back-link"><a href="<?= $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
         <button type="submit" title="<?= $this->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
     </div>
 </form>
