--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -5185,116 +5185,123 @@ label.offcanvas-trigger {
 /* ============================================ *
  * Customer
  * ============================================ */
-.customer-account-login .scaffold-form label:first-child {
-  width: 115px;
-}
-.customer-account-login .col2-set .buttons-set {
-  text-align: left;
-  border-top: 0;
-}
-.customer-account-login .col2-set .col-2 .buttons-set {
-  display: flex;
-  gap: 10px;
-}
-.customer-account-login .col2-set .col-2 .buttons-set button,
-.customer-account-login .col2-set .col-2 .buttons-set .button {
-  flex: 1 1 0;
-  min-width: 0;
-}
-.customer-account-login .col2-set .buttons-set button,
-.customer-account-login .col2-set .buttons-set .button {
-  float: none;
-  min-width: 50%;
-  margin: 0;
-}
-.customer-account-login .col2-set .col-1 ul {
-  list-style: disc;
-  padding-left: 20px;
-  margin: 10px 0 20px 0;
-}
-@media only screen and (min-width: 480px) {
-  .customer-account-login .col2-set .col-1,
-  .customer-account-login .col2-set .col-2 {
-    padding-top: 0;
-    margin-top: 20px;
-  }
-  .customer-account-login .col2-set .col-1 {
-    padding-right: 20px;
-  }
-  .customer-account-login .col2-set .col-2 {
-    padding-left: 20px;
-    border-left: 1px solid var(--maho-color-border-light);
-  }
-}
-@media only screen and (min-width: 770px) {
-  .customer-account-login .col2-set .col-1 {
-    padding-right: 0;
-  }
-  .customer-account-login .col2-set .col-2 {
-    padding-left: 60px;
-    border-left: 1px solid var(--maho-color-border-light);
-  }
-}
-@media only screen and (max-width: 479px) {
-  .customer-account-login .col2-set .col-1 {
-    padding-bottom: 30px;
-  }
-  .customer-account-login .col2-set .col-2 {
-    padding-top: 30px;
-    border-top: 1px solid var(--maho-color-border-light);
-  }
-}
-@media only screen and (max-width: 770px) {
-  .customer-account-login .col2-set p.required {
-    display: none;
-  }
-}
 
-.customer-account-create .scaffold-form label:first-child {
-  width: 140px;
+body.customer-account-login #main-content {
+    max-width: 400px;
+    margin: auto;
+
+    .buttons-set {
+        border-top: none;
+        text-align: center;
+    }
+
+    .buttons-set .button {
+        float: none;
+        margin: 0;
+    }
+
+    .account-login {
+        .tab-selector {
+            position: absolute;
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .login-tabs {
+            display: flex;
+            gap: 0;
+            margin-bottom: 30px;
+            border-bottom: 2px solid #e5e5e5;
+            list-style: none;
+            padding: 0;
+
+            li {
+                flex: 1;
+                margin-bottom: -2px;
+            }
+
+            label {
+                display: block;
+                padding-bottom: 10px;
+                border-bottom: 2px solid transparent;
+                color: var(--maho-color-text-primary);
+                font-size: 1.1em;
+                font-weight: 600;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                text-align: center;
+                text-transform: uppercase;
+            }
+
+            label:hover {
+                color: var(--maho-color-primary);
+            }
+        }
+
+        /* Both pages: tab-login first, tab-register last */
+        #tab-login:checked ~ .login-tabs li:first-child label,
+        #tab-register:checked ~ .login-tabs li:last-child label {
+            color: var(--maho-color-primary, #3399cc);
+            border-bottom-color: var(--maho-color-primary, #3399cc);
+            background: transparent;
+        }
+
+        .tab-content {
+            display: none;
+        }
+        #tab-login:checked ~ form #login-tab,
+        #tab-login:checked ~ #login-tab {
+            display: block;
+        }
+        #tab-register:checked ~ form #register-tab,
+        #tab-register:checked ~ #register-tab {
+            display: block;
+        }
+
+    }
+
+    #forgot-password-dialog {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 400px;
+        border: none;
+        border-radius: 8px;
+        padding: 30px;
+
+        .buttons-set {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        h2 {
+            margin-bottom: 30px;
+            font-size: 1.1em;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        .dialog-close {
+            position: absolute;
+            border: none;
+            background: none;
+            top: 5px;
+            right: 5px;
+            cursor: pointer;
+        }
+
+        &::backdrop {
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(4px);
+        }
+    }
 }
 
 .opc #opc-login p:not(.required) {
   font-style: italic;
   font-size: 0.813rem;
   color: var(--maho-color-text-secondary);
-}
-
-.customer-account-create .buttons-set {
-  max-width: 455px;
-}
-.customer-account-create .fieldset,
-.customer-account-create .buttons-set {
-  margin-left: 30px;
-}
-@media only screen and (max-width: 479px) {
-  .customer-account-create .fieldset,
-  .customer-account-create .buttons-set {
-    margin-left: 0;
-  }
-}
-.customer-account-create .fieldset .hidden {
-  display: none;
-}
-
-.customer-account-forgotpassword #form-validate {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-}
-.customer-account-forgotpassword .fieldset,
-.customer-account-forgotpassword .buttons-set {
-  width: 100%;
-  max-width: 400px;
-}
-@media only screen and (max-width: 479px) {
-  .customer-account-forgotpassword .fieldset,
-  .customer-account-forgotpassword .buttons-set {
-    margin-left: 0;
-  }
-}
-.customer-account-forgotpassword .fieldset .input-box input.input-text {
-  width: 100%;
 }
 
 /* ============================================ *
