--- a/app/design/adminhtml/default/default/template/dashboard/index.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/index.phtml
@@ -146,10 +146,10 @@ function toggleCal(id) {
                     <div style="margin:20px;">
                         <?= $this->getChildHtml('totals') ?>
                     </div>
-                    <div style="margin:20px;">
-                        <?= $this->getChildHtml('grids') ?>
-                        <div id="grid_tab_content"></div>
-                    </div>
+                </div>
+                <div class="entry-edit" style="border:1px solid #ccc; margin-top:20px;">
+                    <?= $this->getChildHtml('grids') ?>
+                    <div id="grid_tab_content"></div>
                 </div>
             </td>
         </tr>
