--- a/app/design/adminhtml/default/default/template/dashboard/index.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/index.phtml
@@ -147,7 +147,7 @@ function toggleCal(id) {
                         <?= $this->getChildHtml('totals') ?>
                     </div>
                 </div>
-                <div class="entry-edit" style="border:1px solid #ccc; margin-top:20px;">
+                <div class="entry-edit" style="margin-top:20px;">
                     <?= $this->getChildHtml('grids') ?>
                     <div id="grid_tab_content"></div>
                 </div>
