Added more analytics to admin dashboard (#382)

--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -55,12 +55,11 @@ Default layout, loads most of the pages
                 <action method="addJs"><script>mage/adminhtml/uploader.js</script></action>
                 <action method="addJs"><script>mage/adminhtml/product.js</script></action>
 
-                <action method="addCss"><name>reset.css</name></action>
-                <action method="addCss"><name>boxes.css</name></action>
-                <action method="addCss"><name>print.css</name><params>media="print"</params></action>
-                <action method="addItem"><type>skin_css</type><name>menu.css</name><params>media="screen, projection"</params></action>
-                <action method="addItem"><type>skin_css</type><name>override.css</name></action>
+
+                <action method="addItem"><type>skin_css</type><name>base.css</name></action>
                 <action method="addItem"><type>skin_css</type><name>form.css</name></action>
+                <action method="addItem"><type>skin_css</type><name>menu.css</name><params>media="screen, projection"</params></action>
+                <action method="addCss"><name>print.css</name><params>media="print"</params></action>
 
                 <action method="addItem"><type>js</type><name>mage/adminhtml/rules.js</name><params/><if/><condition>can_load_rules_js</condition></action>
             </block>
@@ -219,6 +218,42 @@ Base preview layout
             <block type="adminhtml/dashboard_tab_products_viewed" name="adminhtml.dashboard.tab.products.viewed"/>
         </block>
     </adminhtml_dashboard_productsviewed>
+
+    <adminhtml_dashboard_devices>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_devices" name="adminhtml.dashboard.tab.devices"/>
+        </block>
+    </adminhtml_dashboard_devices>
+
+    <adminhtml_dashboard_engagement>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_engagement" name="adminhtml.dashboard.tab.engagement"/>
+        </block>
+    </adminhtml_dashboard_engagement>
+
+    <adminhtml_dashboard_entryexit>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_entryexit" name="adminhtml.dashboard.tab.entryexit"/>
+        </block>
+    </adminhtml_dashboard_entryexit>
+
+    <adminhtml_dashboard_languages>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_languages" name="adminhtml.dashboard.tab.languages"/>
+        </block>
+    </adminhtml_dashboard_languages>
+
+    <adminhtml_dashboard_toppages>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_toppages" name="adminhtml.dashboard.tab.toppages"/>
+        </block>
+    </adminhtml_dashboard_toppages>
+
+    <adminhtml_dashboard_trafficsources>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="log/dashboard_sources" name="adminhtml.dashboard.tab.trafficsources"/>
+        </block>
+    </adminhtml_dashboard_trafficsources>
 
     <adminhtml_index_login>
         <block type="core/text_list" name="root" output="toHtml">
