--- a/app/design/adminhtml/default/default/template/dashboard/index.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/index.phtml
@@ -110,7 +110,20 @@ function toggleCal(id) {
     <?= $this->getChildHtml('store_switcher') ?>
     <table cellspacing="25" width="100%">
         <tr>
-            <td><?= $this->getChildHtml('sales') ?>
+            <td>
+                <?php if ($this->getChild('visitorStats')): ?>
+                <div class="entry-edit">
+                    <div class="entry-edit-head"><h4><?= $this->__('Visitors') ?></h4></div>
+                    <fieldset class="np"><?= $this->getChildHtml('visitorStats') ?></fieldset>
+                </div>
+                <?php endif ?>
+                <?php if ($this->getChild('sessionMetrics')): ?>
+                <div class="entry-edit">
+                    <div class="entry-edit-head"><h4><?= $this->__('Session Metrics') ?></h4></div>
+                    <fieldset class="np"><?= $this->getChildHtml('sessionMetrics') ?></fieldset>
+                </div>
+                <?php endif ?>
+                <?= $this->getChildHtml('sales') ?>
                 <div class="entry-edit">
                     <div class="entry-edit-head"><h4><?= $this->__('Last 5 Orders') ?></h4></div>
                     <fieldset class="np"><?= $this->getChildHtml('lastOrders') ?></fieldset>
@@ -133,10 +146,10 @@ function toggleCal(id) {
                     <div style="margin:20px;">
                         <?= $this->getChildHtml('totals') ?>
                     </div>
-                    <div style="margin:20px;">
-                        <?= $this->getChildHtml('grids') ?>
-                        <div id="grid_tab_content"></div>
-                    </div>
+                </div>
+                <div class="entry-edit" style="margin-top:20px;">
+                    <?= $this->getChildHtml('grids') ?>
+                    <div id="grid_tab_content"></div>
                 </div>
             </td>
         </tr>
