--- a/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
@@ -13,17 +13,13 @@
 ?>
 <?php if(count($this->getTotals()) > 0): ?>
 <div class="box" id="dashboard_diagram_totals">
-    <div class="entry-edit">
-        <table cellspacing="0" width="100%">
-            <tr>
-            <?php foreach( $this->getTotals() as $_total ): ?>
-                <td class="a-center bold">
-                    <span><?= $_total['label'] ?></span><br />
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;"><?= $_total['value'] ?><span style="font-size:14px; color:#DE8946;"><?= $_total['decimals'] ?>
-                </td>
-            <?php endforeach ?>
-            </tr>
-        </table>
+    <div class="dashboard-totals-stats">
+        <?php foreach($this->getTotals() as $_total): ?>
+        <div class="stat-col">
+            <div class="stat-value"><?= $_total['value'] ?><span class="stat-decimals"><?= $_total['decimals'] ?></span></div>
+            <div class="stat-label"><?= $_total['label'] ?></div>
+        </div>
+        <?php endforeach ?>
     </div>
 </div>
 <?php endif ?>
