--- a/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
@@ -17,25 +17,19 @@
 <?php $_compareUrl = $this->helper('catalog/product_compare')->getAddUrlCustom($_product, false); ?>
 
 <?php if ($_wishlistSubmitUrl || $_compareUrl): ?>
-    <ul class="add-to-links">
+    <div class="add-to-links">
         <?php if ($_wishlistSubmitUrl) : ?>
-            <li>
-                <a href="<?= $_wishlistSubmitUrl ?>" class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
-                   onclick="productAddToCartForm.submitLight(this, this.href); return false;">
-                    <?= $this->getIconSvg('heart') ?>
-                    <?= $this->__('Add to Wishlist') ?>
-                </a>
-            </li>
+            <a href="<?= $_wishlistSubmitUrl ?>" class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
+               onclick="productAddToCartForm.submitLight(this, this.href); return false;">
+                <?= $this->getIconSvg('heart') ?>
+            </a>
         <?php endif ?>
         <?php if ($_compareUrl) : ?>
             <?php $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()])) ?>
-            <li>
-                <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
-                   onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
-                    <?= $this->getIconSvg('scale') ?>
-                    <?= $this->__('Add to Compare') ?>
-                </a>
-            </li>
+            <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+               onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
+                <?= $this->getIconSvg('scale') ?>
+            </a>
         <?php endif ?>
-    </ul>
+    </div>
 <?php endif ?>
