--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -3416,18 +3416,22 @@ p.product-name a:hover {
 }
 
 .add-to-links {
-  margin-block: 0.5rem;
-  display: flex;
+  display: inline-flex;
   place-content: center;
-  gap: 0.2rem;
+  gap: 0.5rem;
 }
-
-.product-view .add-to-links {
-  place-content: flex-start;
+.add-to-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--maho-color-border);
+  color: var(--maho-color-text);
 }
-
-.product-options-bottom .add-to-links {
-  margin-block-end: 0;
+.add-to-links a:hover {
+  border-color: var(--maho-color-primary);
+  color: var(--maho-color-primary);
 }
 
 .products-grid .product-image:before, .products-grid .product-image:after {
@@ -4004,20 +4008,6 @@ p.product-name a:hover {
   margin-bottom: 10px;
 }
 
-.product-view {
-  /* Set a min-height so that the floated elements break appropriately */
-}
-.product-view .add-to-box:after,
-.product-view .add-to-cart:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-.product-view .add-to-cart {
-  padding-bottom: 3px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid var(--maho-color-border);
-}
 .product-view .add-to-cart .qty-wrapper,
 .product-view .product-options-bottom .price-box,
 .product-view .add-to-cart-buttons {
@@ -4097,35 +4087,7 @@ p.product-name a:hover {
     text-align: center;
     width: 100%;
     display: block;
-    margin-right: 0;
-    margin-left: 0;
-    float: none;
   }
-}
-/* This is the "or" that separates the "Add to Cart" and "Add to X" links */
-.add-to-box .or {
-  display: none;
-}
-
-.add-to-links a {
-  margin-right: 0.5rem;
-}
-.add-to-links a svg {
-  vertical-align: bottom;
-}
-body:not(.catalog-product-view) .add-to-links a {
-  font-size: 0;
-}
-
-@media only screen and (max-width: 599px) {
-  .add-to-box .add-to-links a {
-    float: none;
-    width: auto;
-    text-indent: 0;
-  }
-}
-.product-collateral {
-  clear: both;
 }
 
 /* Hide radio inputs */
